manpage: add numeric-register operation `p` (print) description.

--- a/doc/qed.1
+++ b/doc/qed.1
@@ -1205,6 +1205,8 @@ not at the end of the line.
 .IP +\fIN\fR
 Increment register by \fIN\fR. `\-', `*', `/', and `%'
 decrement, multiply, divide, or modulo the register by \fIN\fR.
+.IP p
+Print current contents of register. 
 .IP P
 Set register to the decimal value of the process id of
 .I qed.
