--- a/doc/qed-tutorial.7
+++ b/doc/qed-tutorial.7
@@ -1791,6 +1791,7 @@ behaves like \f(CR&\fP, but flips the case of ASCII alphabetics in the matched s
 
 .SH "CONTROL STRUCTURES"
 .sp
+The most commonly used control structure in \fBQed\fP is certainly
 the global command, \f(CRg\fP, which is remarkably powerful and versatile,
 as the previous example demonstrates.
 The ability to place several commands on a line,
