docs: update the manpage with the new Unicode functionality.
Fix a few more inevitable typos in the tutorial...

The manpage is now reasonably complete, and should accurately
describe our Qed.

--- a/doc/qed-tutorial.7
+++ b/doc/qed-tutorial.7
@@ -749,7 +749,7 @@ Perhaps it\(cqs simplest just to state the rules:
 .  IP \(bu 2.3
 .\}
 \f(CR\fB\(rsX\fP\fP is a special character if \f(CRX\fP is one of
-\f(CR\fBb\fP\fP, \f(CR\fBB\fP\fP, \f(CR\fBc\fP\fP, \f(CR\fBf\fP\fP, \f(CR\fBF\fP\fP, \f(CR\fBl\fP\fP, \f(CR\fBN\fP\fP, \f(CR\fBp\fP\fP, \f(CR\fBr\fP\fP, \f(CR\fBu\fP\fP, \f(CR\fBU\fP\fP, \f(CR\fBz\fP\fP, or \f(CR\fB"\fP\fP,
+\f(CR\fBb\fP\fP, \f(CR\fBB\fP\fP, \f(CR\fBc\fP\fP, \f(CR\fBf\fP\fP, \f(CR\fBF\fP\fP, \f(CR\fBl\fP\fP, \f(CR\fBN\fP\fP, \f(CR\fBp\fP\fP, \f(CR\fBr\fP\fP, \f(CR\fBu\fP\fP, \f(CR\fBU\fP\fP, \f(CR\fBx\fP\fP, \f(CR\fBz\fP\fP, or \f(CR\fB"\fP\fP,
 sometimes (as with \f(CR\(rsb\fP) followed by a buffer name. It
 is interpreted \fIimmediately\fP.
 (We will see what all these special characters are in due course.)
@@ -3514,7 +3514,7 @@ considering that many of the examples had \fBQed\fP code interspersed
 with \fItroff\fP code!
 .SS "History"
 .sp
-Originally written by \fBRobert Pike\fP at U. of T. in 1992..
+Originally written by \fBRobert Pike\fP at U. of T. in 1992.
 .sp
 Converted to \f(CRasciidoc\fP, edited,
 and updated by \fISean Jensen\fP in February 2021.
