docs: add the `:reproducible:` attribute to the `asciidoc` sources.
This keeps the datestamp out of the runoffs, and so doesn't exercise
`git` quite as much.

--- a/doc/qed-tutorial.7
+++ b/doc/qed-tutorial.7
@@ -2,12 +2,11 @@
 .\"     Title: qed-tutorial
 .\"    Author: Robert Pike, Sean Jensen (ed.)
 .\" Generator: Asciidoctor 2.0.12
-.\"      Date: 2021-02-20
 .\"    Manual: \ \&
 .\"    Source: \ \&
 .\"  Language: English
 .\"
-.TH "QED\-TUTORIAL" "7" "2021-02-20" "\ \&" "\ \&"
+.TH "QED\-TUTORIAL" "7" "" "\ \&" "\ \&"
 .ie \n(.g .ds Aq \(aq
 .el       .ds Aq '
 .ss \n[.ss] 0
@@ -2597,7 +2596,7 @@ would be:
 .if n .RS 4
 .nf
 .fam C
-ob""\(rsx1b[F"+p
+ob""\(rscx1b[F"+p
 .fam
 .fi
 .if n .RE
