docs: finessing the manpage version of the tutorial.
Thanks to `askr`.

Fixes #12

--- a/doc/qed-tutorial.7
+++ b/doc/qed-tutorial.7
@@ -26,11 +26,8 @@
 .  .
 .  LINKSTYLE blue R < >
 .\}
-.SH "NAME"
-qed\-tutorial \- Programming in Qed: A Tutorial
-.SH "SYNOPSIS"
-.sp
-man 7 qed\-tutorial
+.SH "PROGRAMMING IN QED: A TUTORIAL"
+by Robert Pike
 .SH "INTRODUCTION"
 .sp
 \fBQed\fP is a programmable text editor, intended for use primarily
