--- a/doc/qed.1
+++ b/doc/qed.1
@@ -479,7 +479,7 @@ the new last line becomes the current line.
 The character after the `d' can only be one of
 a blank, newline, tab, or display character.
 Line 0 is a valid address for deletion;
-deleting line 0 has no affect on any lines in the buffer.
+deleting line 0 has no effect on any lines in the buffer.
 .TP 5
 e filename
 The edit
