docs: fix typo in tutorial
"maked" --- seriously!?

--- a/doc/qed-tutorial.7
+++ b/doc/qed-tutorial.7
@@ -2417,7 +2417,7 @@ and sending it out to (another ancient command) \fIargs\fP:
 .if n .RE
 .sp
 (\fIargs\fP was a command that took each line on its standard input
-and maked it an argument to the command,
+and made it an argument to the command,
 which was then \fIexec\fP\-ed in the normal manner.)
 .sp
 The following commands can initiate the construction of
