--- a/doc/src/qed.1
+++ b/doc/src/qed.1
@@ -1,3 +1,4 @@
+.ad l
 .TH QED 1 "Feb 2021"
 .if t .ds q \(aa
 .if n .ds q '
@@ -1658,6 +1659,8 @@ Programming in
 .IR Qed :
 a Tutorial
 (Robert Pike)
+.PP
+qed-tutorial(7)
 .PP
 ed(1)
 .SH "HISTORY"
